--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -1,16 +1,3 @@
-!this is multiple iso load usb flash grub example
-!TODO:prepare flash script
-!wget releases.ubuntu.com/24.04/ubuntu-24.04.3-desktop-amd64.iso
-!wget releases.ubuntu.com/24.04/ubuntu-24.04.3-live-server-amd64.iso
-!wget download.mikrotik.com/routeros/7.20.7/mikrotik-7.20.7.iso
-!wget tinycorelinux.net/16.x/x86/release/TinyCore-current.iso
-!fdisk ...dntw
-!/dev/sdb2: UUID="85daef68-56c0-4001-93c8-a7831ef6101a" BLOCK_SIZE="4096" TYPE="ext4" PARTUUID="001286fb-02"
-!/dev/sdb1: LABEL_FATBOOT="Multiboot" LABEL="Multiboot" UUID="BCAA-C501" BLOCK_SIZE="512" TYPE="vfat" PARTUUID="001286fb-01"
-!mkfs.vfat -F 32 -n Multiboot /dev/sdb1
-!mount /dev/sdb1 /mnt
-!grub-install --force --removable --target=x86_64-efi --boot-directory=/mnt/boot --efi-directory=/mnt /dev/sdb
-
 set timeout=30
 
 loadfont unicode
@@ -18,9 +5,8 @@ loadfont unicode
 set menu_color_normal=white/black
 set menu_color_highlight=black/light-gray
 
-!TODO: remove hardcode
-search --no-floppy --fs-uuid --set=root BCAA-C501
-search --no-floppy --fs-uuid --set=iso_root 85daef68-56c0-4001-93c8-a7831ef6101a
+search --no-floppy --fs-uuid --set=root REPLACE_ME_BOOT_DISK_UUID
+search --no-floppy --fs-uuid --set=iso_root REPLACE_ME_ISO_DISK_UUID
 
 menuentry "ubuntu-24.04.3-desktop-amd64.iso" {
         set isofile="/ubuntu-24.04.3-desktop-amd64.iso"
